Fixed overlapping nav bar with padding-top.

--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@ body {
 	align-items:center;
   flex-direction:column;
 	justify-content:center;
-	height:100vh;
 	overflow:scroll;
-	margin:1em;
+	margin:auto;
   overflow-y:scroll;
   overflow-x:scroll;
+  padding-top: 50px;
   }
 
 ul {
@@ -75,16 +75,17 @@ li a:hover {
   font-weight: 700;
   text-decoration: none;
   position: relative;
-  top: 150px;
+  top: 30px;
   bottom: 30px;
   font-style: normal;
   font-variant: small-caps;
   text-transform: none;
   text-shadow: 1px 17px 8px #4A301F;
   padding: 20px;
+  padding-bottom:45px;
   display: block;
   z-index: 1;
-  height: 200px;
+  height: 80px;
   overflow: visible;
   }
 
@@ -125,7 +126,7 @@ li a:hover {
   padding: 10px;
   z-index: 0;
   background-color: black;
-}
+  }
 
 .Social img {
   height: 100px;
